<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#E4E3E3"
    android:orientation="vertical"
    android:drawingCacheQuality="high"
    tools:context=".ui.neighbour_list.DetailsActivity">

    <TextView
        android:id="@+id/activity_aboutMe_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:ems="14"
        android:lines="4"
        android:padding="@dimen/padding_text"
        android:text="AboutMe"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/activity_number_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_phone_white_24dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorAccent"
        android:ems="24"
        android:padding="@dimen/padding_text"
        android:text="NumberPhone"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toTopOf="@+id/activity_mail_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_address_details" />

    <TextView
        android:id="@+id/activity_mail_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_web_white_24dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorAccent"
        android:ems="24"
        android:padding="@dimen/padding_text"
        android:text="Email"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_number_details" />

    <ImageView
        android:id="@+id/activity_avatar_details"
        android:layout_width="@dimen/size_image_width_activity"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:drawingCacheQuality="high"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_name_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/activity_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:ems="14"
        android:padding="@dimen/padding_title"
        android:text="Name"
        android:textColor="#302A2A"
        android:textSize="@dimen/size_title"
        app:layout_constraintBottom_toTopOf="@+id/activity_address_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_avatar_details" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:ems="14"
        android:padding="@dimen/padding_title"
        android:text="A propos de moi"
        android:textColor="#3C3131"
        android:textSize="@dimen/size_title"
        app:layout_constraintBottom_toTopOf="@+id/activity_aboutMe_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_mail_details" />

    <TextView
        android:id="@+id/activity_address_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_location_on_white_24dp"
        android:drawablePadding="10dp"
        android:drawableTint="@color/colorAccent"
        android:ems="24"
        android:padding="@dimen/padding_text"
        android:text="Address"
        android:textSize="@dimen/size_text"
        app:layout_constraintBottom_toTopOf="@+id/activity_number_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_name_details" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        android:drawingCacheQuality="auto"
        android:tint="#FFAB00"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/activity_name_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_avatar_details"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <TextView
        android:id="@+id/activity_name_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:ems="5"
        android:padding="10dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_name_details"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/activity_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="55dp"
        android:background="?attr/actionModeCloseDrawable"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/activity_avatar_details"
        app:layout_constraintEnd_toStartOf="@+id/activity_avatar_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>